[tool.poetry]
name = "making-change"
version = "0.1.0"
description = ""
authors = ["Rueben Ramirez <ruebenramirez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
